tests/integration/security/reachability/testdata/labels-mtls-on.yaml
apiVersion: authentication.istio.io/v1alpha1
kind: Policy
metadata:
  name: "c-mtls"
spec:
  targets:
    - labels:
        "app": "c"
  peers:
    - mtls: {}
---
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "default"
spec:
  host: "*.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
